# UniverseBox

./: .gitignore  BOOTSTRAP_REPORT.md  LICENSE  MASTER_PROJECT_FILE.md  README.md  package_build.py  pyproject.toml  run_dev.py  run_tests.py  setup_env.py
agents/: README.md  coder_agent.py  debugger_agent.py  orchestrator.py  planner_agent.py  reviewer_agent.py  task_models.py
agents/prompts/: coding_prompt.md  debugging_prompt.md  gameplay_prompt.md  planning_prompt.md  review_prompt.md  system_prompt.md
config/: README.md  agent_settings.json  logging.json  logging.yaml  project_settings.json  settings.example.toml  simulation_defaults.json
docs/: README.md  architecture.md  coding_standards.md  debugging_guide.md  development.md  module_guide.md  roadmap.md
godot/: debug_overlay.gd  debug_overlay.tscn  main.gd  main.tscn  project.godot  simulation_bridge.gd  universe_view.gd  universe_view.tscn
godot/scenes/: debug_overlay.tscn  main.tscn  universe_view.tscn
godot/scripts/: debug_overlay.gd  game.gd  main.gd  simulation_bridge.gd  universe_view.gd
godot/ui/: control_panel.gd  control_panel.tscn  hud.gd  hud.tscn
logs/: .gitkeep
python/: __init__.py
python/core/: __init__.py  config_loader.py  engine.py  event_bus.py  logging_system.py  service_registry.py
python/gameplay/: __init__.py  civilization_stub.py  creature_stub.py  event_system_stub.py  interaction_stub.py  loop.py
python/persistence/: __init__.py  save_manager.py  snapshot_serializer.py
python/simulation/: __init__.py  biome_system.py  planet_generator.py  (+6 more)
saves/: .gitkeep
(+47 files in other folders)
