[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universebox"
version = "0.1.0"
description = "Starter framework for a simulation-driven sandbox game."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["python/tests"]
addopts = "-q"
