[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universebox"
version = "0.1.0"
description = "UniverseBox starter simulation framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["python/tests"]
addopts = "-q"
